--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.wonders.xlab</groupId>
-  <artifactId>qudongdong</artifactId>
+  <artifactId>qdd</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-
-  <name>qudongdong</name>
-  <url>http://maven.apache.org</url>
 
   <repositories>
     <repository>
@@ -17,7 +14,6 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
-
   </repositories>
 
   <parent>
@@ -65,6 +61,37 @@
       <artifactId>qiniu-java-sdk</artifactId>
       <version>7.0.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>2.10.0</version>
+    </dependency>
+
+    <!-- test begin -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.dbunit</groupId>
+      <artifactId>dbunit</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.springtestdbunit</groupId>
+      <artifactId>spring-test-dbunit</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!-- test end -->
+
   </dependencies>
 
 </project>
