--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url: jdbc:mysql:///qudongdong?createDatabaseIfNotExist=true&autoReconnect=true
+#spring.datasource.url: jdbc:mysql:///qudongdong?createDatabaseIfNotExist=true&autoReconnect=true
+#spring.datasource.username: root
+#spring.datasource.password:
 
+spring.datasource.url: jdbc:mysql://10.1.64.181:3306/qudongdong?createDatabaseIfNotExist=true&autoReconnect=true
 spring.datasource.username: root
-spring.datasource.password:
+spring.datasource.password: root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,3 +18,8 @@ multipart.maxFileSize = -1
 
 # Total request size for a multipart/form-data
 multipart.maxRequestSize = -1
+
+appId=wxab1f6505deb6588c
+appSecret=8df47114c4ea09f7c29a6abf5678ab83
+
+myToken=qudongdong2015xlab
