添加微信自定义跳转

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <version>2.10.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.thoughtworks.xstream</groupId>
+      <artifactId>xstream</artifactId>
+      <version>1.4.8</version>
+    </dependency>
+
     <!-- test begin -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
