--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -21,5 +21,7 @@ multipart.maxRequestSize = -1
 
 appId=wxab1f6505deb6588c
 appSecret=8df47114c4ea09f7c29a6abf5678ab83
-
 myToken=qudongdong2015xlab
+#appId=wx5052e76f586dd7bf
+#appSecret=00fa9715f4824624d4f6a55c64775686
+#myToken=yiqizao2015xlab
