--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username: root
 #spring.datasource.password:
 
-spring.datasource.url: jdbc:mysql://10.1.64.181:3306/qudongdong?createDatabaseIfNotExist=true&autoReconnect=true
+spring.datasource.url: jdbc:mysql://10.1.64.181:3306/qudongdong?createDatabaseIfNotExist=true
 spring.datasource.username: root
 spring.datasource.password: root
 
