--- a/src/main/resources/ueditor/config.properties
+++ b/src/main/resources/ueditor/config.properties
@@ -16,7 +16,7 @@ ue.imageCompressBorder=1600
 # 插入的图片浮动方式
 ue.imageInsertAlign=none
 # 图片访问路径前缀（放在七牛上）
-ue.imageUrlPrefix=http://7xlbxz.com2.z0.glb.qiniucdn.com/
+ue.imageUrlPrefix=http://7xlgo8.com2.z0.glb.qiniucdn.com/
 # 上传保存路径,可以自定义保存路径和文件名格式
 ue.imagePathFormat=/{filename}
 
