--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -2,7 +2,7 @@
 #spring.datasource.username: root
 #spring.datasource.password:
 
-spring.datasource.url: jdbc:mysql://10.1.64.181:3306/qudongdong?createDatabaseIfNotExist=true
+spring.datasource.url: jdbc:mysql://10.1.64.181:3306/qiyuji?createDatabaseIfNotExist=true
 spring.datasource.username: root
 spring.datasource.password: root
 
@@ -23,5 +23,5 @@ multipart.maxRequestSize = -1
 #appSecret=8df47114c4ea09f7c29a6abf5678ab83
 #myToken=qudongdong2015xlab
 appId=wx5052e76f586dd7bf
-appSecret=00fa9715f4824624d4f6a55c64775686
+appSecret=1a3105cb73cb6e17864c49dac1fee785
 myToken=yiqizao2015xlab
