修改菜单接口，修改web

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -22,6 +22,11 @@ multipart.maxRequestSize = -1
 #appId=wxab1f6505deb6588c
 #appSecret=8df47114c4ea09f7c29a6abf5678ab83
 #myToken=qudongdong2015xlab
-appId=wx5052e76f586dd7bf
-appSecret=1a3105cb73cb6e17864c49dac1fee785
-myToken=yiqizao2015xlab
+
+
+#appId=wx5052e76f586dd7bf
+#appSecret=1a3105cb73cb6e17864c49dac1fee785
+
+appId=wxab1f6505deb6588c
+appSecret=8df47114c4ea09f7c29a6abf5678ab83
+myToken=qiyuji2015xlab
