--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -23,10 +23,15 @@ multipart.maxRequestSize = -1
 #appSecret=8df47114c4ea09f7c29a6abf5678ab83
 #myToken=qudongdong2015xlab
 
-
+#躁动
 #appId=wx5052e76f586dd7bf
 #appSecret=1a3105cb73cb6e17864c49dac1fee785
 
-appId=wxab1f6505deb6588c
-appSecret=8df47114c4ea09f7c29a6abf5678ab83
+#我的测试
+#appId=wxab1f6505deb6588c
+#appSecret=8df47114c4ea09f7c29a6abf5678ab83
+
+# 奇羽记
+appId=wx6ed51189d6932881
+appSecret=1a3105cb73cb6e17864c49dac1fee785
 myToken=qiyuji2015xlab
