--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,14 @@
                       </goals>
                   </execution>
               </executions>
+
+              <dependencies>
+                  <dependency>
+                      <groupId>org.springframework</groupId>
+                      <artifactId>springloaded</artifactId>
+                      <version>1.2.0.RELEASE</version>
+                  </dependency>
+              </dependencies>
           </plugin>
 
       </plugins>
