--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <repositories>
     <repository>
       <id>xlab-nexus-snapshots</id>
-      <url>http://101.231.124.8:45675/nexus/content/repositories/snapshots</url>
+      <url>http://101.231.124.8:45682/nexus/content/repositories/snapshots</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
@@ -17,10 +17,22 @@
   </repositories>
 
   <parent>
-    <groupId>com.wonders.xlab</groupId>
-    <artifactId>xlab-pom-root</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.3.3.RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
   </parent>
+
+  <properties>
+    <java.version>1.8</java.version>
+    <start-class>com.wonders.xlab.framework.Application</start-class>
+  </properties>
+
+  <!--<parent>-->
+    <!--<groupId>com.wonders.xlab</groupId>-->
+    <!--<artifactId>xlab-pom-root</artifactId>-->
+    <!--<version>1.0-SNAPSHOT</version>-->
+  <!--</parent>-->
 
   <dependencies>
     <dependency>
@@ -90,11 +102,13 @@
     <dependency>
       <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
+      <version>2.5.1</version>
     </dependency>
 
     <dependency>
       <groupId>com.github.springtestdbunit</groupId>
       <artifactId>spring-test-dbunit</artifactId>
+      <version>1.2.1</version>
     </dependency>
 
     <dependency>
@@ -102,8 +116,18 @@
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- test end -->
+     <!--test end -->
 
   </dependencies>
+
+  <build>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
