--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -11,6 +11,8 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.format_sql=true
 
+jackson.indent.output=true
+
 app.basePackages=com.wonders.xlab.qudongdong
 
 # File size limit
