--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.2.7.RELEASE</version>
+    <version>1.3.3.RELEASE</version>
   </parent>
 
   <groupId>com.wonders.xlab</groupId>
@@ -24,9 +24,9 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <java.version>1.7</java.version>
-    <spring.version>4.2.1.RELEASE</spring.version>
-    <jackson.version>2.6.2</jackson.version>
+    <java.version>1.8</java.version>
+    <!--<spring.version>4.2.1.RELEASE</spring.version>-->
+    <!--<jackson.version>2.6.2</jackson.version>-->
     <start-class>com.wonders.xlab.framework.Application</start-class>
   </properties>
 
