--- a/pom.xml
+++ b/pom.xml
@@ -118,32 +118,12 @@
   </dependencies>
 
   <build>
-    <finalName>qdd</finalName>
-
-      <plugins>
-
-          <plugin>
-              <groupId>org.springframework.boot</groupId>
-              <artifactId>spring-boot-maven-plugin</artifactId>
-              <version>${spring-boot.version}</version>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>repackage</goal>
-                      </goals>
-                  </execution>
-              </executions>
-
-              <!--<dependencies>-->
-                  <!--<dependency>-->
-                      <!--<groupId>org.springframework</groupId>-->
-                      <!--<artifactId>springloaded</artifactId>-->
-                      <!--<version>1.2.0.RELEASE</version>-->
-                  <!--</dependency>-->
-              <!--</dependencies>-->
-          </plugin>
-
-      </plugins>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
-
 </project>
