--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -11,6 +11,11 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.datasource.test-on-borrow=true
+spring.datasource.test-on-return=true
+spring.datasource.test-while-idle=true
+spring.datasource.validation-query=SELECT 1
+
 jackson.indent.output=true
 
 app.basePackages=com.wonders.xlab.qudongdong
